--- a/src/app/edit-course-page/edit-course-page.component.html
+++ b/src/app/edit-course-page/edit-course-page.component.html
@@ -35,7 +35,7 @@
                 <div class="authors">
                     <label tuiLabel="Authors">
                         <tui-multi-select
-                            *tuiLet="items$ | async as items"
+                            *tuiLet="filteredAuthors$ | async as items"
                             [expandable]="true"
                             [tuiTextfieldLabelOutside]="true"
                             (searchChange)="onSearchChange($event)"
